criação do componente base dos albuns e inserção do markup do light box

--- a/App-Reinaldo-Fotos/src/app/components/pages/gallery-page/image-cards-gallery-page/image-cards-gallery-page.component.html
+++ b/App-Reinaldo-Fotos/src/app/components/pages/gallery-page/image-cards-gallery-page/image-cards-gallery-page.component.html
@@ -4,7 +4,7 @@
     <figcaption class="figcaption-card-galley-image">
       <h2>{{ gallery.title }}</h2>
       <p>{{ gallery.text }}</p>
-      <a href=""></a>
+      <a href="{{ gallery.router_link }}"></a>
     </figcaption>
   </figure>
 </div>
