--- a/App-Reinaldo-Fotos/src/app/components/pages/contact-page/form-contact-page/form-contact-page.component.css
+++ b/App-Reinaldo-Fotos/src/app/components/pages/contact-page/form-contact-page/form-contact-page.component.css
@@ -1,14 +1,8 @@
 .container-contato {
   padding: 0% 0%;
-  display: flex;
-  justify-content: space-around;
-  overflow: visible;
-  margin-bottom: 3%;
+  margin-bottom: 20%;
 }
 .container-form {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
   font-size: 16px;
   border: 2px solid #ffffff;
   padding: 2% 3%;
@@ -18,10 +12,7 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-form label:hover {
-  text-decoration: underline;
-  transform: scale(1.1, 1.1);
-}
+
 
 .container-form:hover {
   border: 2px solid #ffffff;
@@ -37,8 +28,9 @@ form label:hover {
 .container-form form {
   justify-content: space-between;
   display: flex;
+  flex-direction: wrap;
   flex-wrap: wrap;
-  margin: 5% 0;
+  gap:1.8em;
 }
 
 form input {
@@ -50,13 +42,10 @@ form input {
   border: 2px solid #ffffff;
   height: 2.5em;
   opacity: 1;
-
+  padding-left: 10px;
   transition: all 0.2s ease-in-out;
 }
-form input,
-label {
-  margin-bottom: 3%;
-}
+
 
 form input:hover {
   border: 2px solid #ffffff;
@@ -64,7 +53,7 @@ form input:hover {
 }
 form input::placeholder {
   font-size: 0.9em;
-  text-indent: 0.5em;
+  text-indent: 0.6em;
   color: #ffffff;
 }
 textarea {
@@ -88,6 +77,60 @@ textarea:hover {
   border: 2px solid #ffffff;
   box-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff;
 }
+
+.input-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  
+}
+
+.input-wrapper label{ 
+  padding-left: 20px;
+  margin-bottom: .8rem;
+}
+.radio-text label{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  z-index: 10;
+}
+input[type=date]{
+  padding-left: 5px;
+}
+
+input[type=radio]{
+  width: 80px;
+  position: absolute;
+  appearance: none;
+  transform: translateX(-24px) translateY(-25px);
+  z-index: 0;
+}
+
+.label-input:checked{
+  background-color: rgb(68, 67, 67);
+}
+
+
+.input-wrapper-ambient{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  gap: 20px;
+  padding: 1rem 1rem 1.2rem 1rem;
+  width: 96%;
+
+  border-radius: 10px;
+}
+
+.wrapper-content-ambient{
+  display: flex;
+    flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+}
 .btn {
   margin-top: 3%;
   margin-left: 100%;
@@ -103,15 +146,17 @@ textarea:hover {
 }
 
 .button {
-  margin-top: 50%;
-  margin-left: 450%;
+  margin-top: 20%;
+  margin-left: 280%;
+  margin-bottom: 30%;
   color: #000000;
   border: none;
-  width: 100px;
-  height: 25px;
+  width: 130px;
+  height: 40px;
   outline: none;
   border-radius: 10px;
   transition: 0.2s;
+  font-size: 1.2rem;
 }
 
 .button:hover {
@@ -126,4 +171,8 @@ textarea:hover {
   margin-bottom: -6px;
   width: 100%;
   max-width: 2100px;
+}
+
+input[type=radio]{
+  
 }
