criação da API e inserção de um novo álbum e alteração de componentes

--- a/App-Reinaldo-Fotos/src/app/components/pages/contact-page/form-contact-page/form-contact-page.component.html
+++ b/App-Reinaldo-Fotos/src/app/components/pages/contact-page/form-contact-page/form-contact-page.component.html
@@ -40,29 +40,24 @@
         />
       </div>
       <div class="input-wrapper">
-        <label for="dateEvent">Data do Evento:</label
+        <label for="date_event">Data do Evento:</label
         ><input
           type="date"
-          name="dateEvent"
+          name="dateevent"
           id=""
           placeholder="Data do eventão!"
-          formControlName="dateEvent"
+          formControlName="dateevent"
           required
         />
       </div>
 
       <div class="input-wrapper">
-        <label for="qntPersons">Qnt de Pessoas:</label>
-        <input
-          type="number"
-          name="qntPersons"
-          id=""
-          formControlName="qntPersons"
-        />
+        <label for="guests">Qnt de Pessoas:</label>
+        <input type="number" name="guests" id="" formControlName="guests" />
       </div>
       <div class="input-wrapper">
-        <label for="qntHours">Horas de Evento:</label>
-        <input type="number" name="qntHours" id="" formControlName="qntHours" />
+        <label for="time">Horas de Evento:</label>
+        <input type="number" name="time" id="" formControlName="time" />
       </div>
       <div class="input-wrapper-ambient">
         <div>
