Criação do service e a conexão com a API e alteração do CSS da barra de rolagem

--- a/App-Reinaldo-Fotos/src/app/components/pages/contact-page/contact-page.component.html
+++ b/App-Reinaldo-Fotos/src/app/components/pages/contact-page/contact-page.component.html
@@ -1,4 +1,6 @@
 <div class="container-contact">
   <app-title-contact-page></app-title-contact-page>
-  <app-form-contact-page></app-form-contact-page>
+  <app-form-contact-page
+    (onSubmit)="createHandler($event)"
+  ></app-form-contact-page>
 </div>
