--- a/App-Reinaldo-Fotos/src/styles.css
+++ b/App-Reinaldo-Fotos/src/styles.css
@@ -56,6 +56,21 @@
   overflow: hidden;
 }
 
+
+*::-webkit-scrollbar{
+  width: 10px;
+
+  
+}
+*::-webkit-scrollbar-track{
+
+  background: #000;
+}
+*::-webkit-scrollbar-thumb{
+  background-color: #fff;
+  border-radius: 5px;
+  border:2px solid #000;
+}
 @keyframes navBorderPop {
   0% {
     transform: scale(0);
