--- a/App-Reinaldo-Fotos/src/app/components/pages/contact-page/form-contact-page/form-contact-page.component.html
+++ b/App-Reinaldo-Fotos/src/app/components/pages/contact-page/form-contact-page/form-contact-page.component.html
@@ -103,7 +103,7 @@
       </div>
 
       <div class="main">
-        <input type="submit" class="button" value="Enviar" />
+        <input type="submit" class="button" value="Enviar" enabel />
       </div>
     </form>
   </fieldset>
