--- a/App-Reinaldo-Fotos/src/app/components/pages/home-page/thumb-image-left/thumb-image-left.component.html
+++ b/App-Reinaldo-Fotos/src/app/components/pages/home-page/thumb-image-left/thumb-image-left.component.html
@@ -1,13 +1,13 @@
 <div class="container-card-image" id="thmb-lft">
   <a routerLink="/gallery-volta-sto-amaro" class="card-link-left">
     <img
-      src="../../../../../assets/imgs/home-page-thumb-images/slider-canoa-home-page.jpg"
+      src="../../../../../assets/imgs/gallery/album1/image2.jpg"
       class="img-thumb-home-page"
       width="100%"
       alt=""
     />
     <div class="title-text-card-image">
-      <h3>XIX Volta <br />Sto Amaro</h3>
+      <h3>Album 1</h3>
     </div>
     <div class="text-card-image">
       <p>
