--- a/App-Reinaldo-Fotos/src/app/components/pages/home-page/thumb-image-right/thumb-image-right.component.html
+++ b/App-Reinaldo-Fotos/src/app/components/pages/home-page/thumb-image-right/thumb-image-right.component.html
@@ -1,13 +1,13 @@
 <div class="container-card-images" id="thmb-right">
   <a routerLink="/gallery-volta-sto-amaro" class="card-link-left">
     <img
-      src="../../../../../assets/imgs/home-page-thumb-images/thumb-campMasc-home-page.jpg"
+      src="../../../../../assets/imgs/gallery/album9/image4.jpg"
       class="img-thumb-home-page-right"
       width="100%"
       alt=""
     />
     <div class="title-text-card-image">
-      <h3>Brasileirão 2021<br />Santos x RB Bragantino</h3>
+      <h3>Album 9</h3>
     </div>
     <div class="text-card-image">
       <p>
